# sliders

./: .example.env  .gitignore  LICENSE  README.md  pyproject.toml  run_sliders.py
configs/: finance_bench_direct_without_tool_use.yaml  loong_direct_without_tool_use_finance.yaml  loong_direct_without_tool_use_legal.yaml  loong_direct_without_tool_use_papers.yaml  sec_10q_sliders.yaml  wiki_celeb_sliders.yaml
configs/benchmarks/: finance_bench_coa.yaml  finance_bench_sliders.yaml  loong_coa_finance_cz.yaml  loong_coa_finance_en.yaml  loong_coa_legal.yaml  loong_coa_papers.yaml  loong_rlm_finance_bench.yaml  loong_rlm_finance_cz.yaml  loong_rlm_finance_en.yaml  loong_rlm_legal.yaml  loong_rlm_papers.yaml  loong_sliders_finance_cz.yaml  loong_sliders_finance_en.yaml  loong_sliders_legal.yaml  loong_sliders_papers.yaml  oolong_coa_256k.yaml  oolong_rlm_256k.yaml  oolong_sliders_contextlen_256k.yaml
examples/: sliders_colab.ipynb
sample_data/: 30_sample_ids_finance_ablation.csv  30_sample_ids_financebench_ablation.csv  30_sample_ids_legal_ablation.csv  30_sample_ids_papers_ablation.csv  50_sample_ids_finance.csv  50_sample_ids_finance_en_final.csv  50_sample_ids_finance_zh_final.csv  50_sample_ids_legal_final.csv  50_sample_ids_papers_final.csv
sample_docs/: drug_trial_a.md  drug_trial_b.md
sliders/: baselines.py  cli.py  datasets.py  default_config.yaml  document.py  evaluation.py  experiment.py  llm_models.py  log_utils.py  run.py  runner.py  sliders_taxonomy.json  system.py  utils.py
sliders/callbacks/: logging.py
sliders/chunkers/: chunker.py  json_chunker.py
sliders/experiments/: base.py  finance_bench.py  loong.py  oolong.py  sec_10q.py  wiki_celeb.py
sliders/llm/: __init__.py  llm.py
sliders/llm_tools/: __init__.py  sql.py
sliders/models/: __init__.py  schema_dag.py
sliders/modules/: __init__.py  canonicalize_fields.py  extract_schema.py  generate_schema.py  handle_null_primary_keys.py  merge_schema.py  primary_key_selector.py  question_rephraser.py
sliders/modules/answer_techniques/: __init__.py  inspect_answer.py
sliders/modules/merge_techniques/: __init__.py  reconciliation.py
sliders/prompts/baselines/: coa_manager.prompt  coa_worker.prompt  question_guided_answer.prompt  question_guided_extract.prompt
sliders/prompts/evaluators/: numeric_extractor.prompt
sliders/prompts/sliders/: absent_table_arbiter.prompt  answer_from_schema_tool_use.prompt  answer_with_tool_use_output.prompt  canonicalize_document_level.prompt  canonicalize_fields.prompt  check_information_density.prompt  complete_user_schema.prompt  direct_answer_from_tables.prompt  extract_schema.prompt  extraction_fallback_question.prompt  force_answer_from_schema_tool_use.prompt  generate_row_instructions.prompt  generate_schema_qa.prompt  handle_null_non_pk_columns.prompt  handle_null_primary_keys.prompt  is_relevant_chunk.prompt  rephrase_question_component.prompt  select_guidelines_for_schema.prompt  (+1 more)
(+7 files in other folders)
